--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,7 +13,7 @@
     padding: 10px 16px;
   }
   &-img {
-    height: 40px;
+    height: 36px;
   }
 }
 
